lbservice.yaml
apiVersion: v1
kind: Service

metadata:
   name: firstservice
   labels: 
     env: testing

spec:
   selector: 
     env: poc
   ports:
     - port: 80
       targetPort: 80
