istio-gateway-virtualservive.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingressgwt
spec:
  selector:
    app: istio-ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingressvs
spec:
  hosts:
  - "*"
  gateways:
  - ingressgwt
  http:
  - route:
    - destination:
        port:
          number: 80
        host: springboot.poc.svc.cluster.local
